--- a/Bus Website.html
+++ b/Bus Website.html
@@ -10,7 +10,7 @@
   <div class="row-full"> </div>
 </div>
 <heading> Guide to riding metro: </heading>
-<h1> Dominic Bus rules and etiquette <span><br>Grade 7-10:</span> </h1>
+<h1> ADominic Bus rules and etiquette <span><br>Grade 7-10:</span> </h1>
 <h3> When catching the bus to and from school,
   it is important to understand the bus rules and etiquette.
   If you understand these rules the bus will be a more enjoyable experience for everyone. </h3>
