--- a/Bus Website.html
+++ b/Bus Website.html
@@ -10,7 +10,7 @@
   <div class="row-full"> </div>
 </div>
 <heading> Guide to riding metro: </heading>
-<h1> ADominic Bus rules and etiquette <span><br>Grade 7-10:</span> </h1>
+<h1> Dominic Bus rules and etiquette <span><br>Grade 7-10:</span> </h1>
 <h3> When catching the bus to and from school,
   it is important to understand the bus rules and etiquette.
   If you understand these rules the bus will be a more enjoyable experience for everyone. </h3>
@@ -20,7 +20,7 @@
 <p> Do not disturb the bus driver, If the bus driver is distracted an accident may happen, be respetful and let the bus driver drive the bus. </p>
 <p> Let grade 10's sit at the back of the bus, any grade 10 should be able to sit at the back, No one should prevent others from taking a seat. </p>
 <p> Listen to the teachers for your safty and line up at the signs </p>
-<p> For more information, Call 13 22 01 for timetable and service information, wheelchair and disability accessible information, and general enquiries. The hotline is staffed 7am to 6pm Monday to Friday. For Online Enquiries
+<last> For more information, Call 13 22 01 for timetable and service information, wheelchair and disability accessible information, and general enquiries. The hotline is staffed 7am to 6pm Monday to Friday. For Online Enquiries
   Please email correspondence@metrotas.com.au
   
   
@@ -32,5 +32,5 @@
   Burnie – Depot Office at 28 Strahan Street open 8.30am to 5pm, Monday to Friday.
   
   Postal Address
-  PO Box 61, Moonah, TAS 7009 </p>
+  PO Box 61, Moonah, TAS 7009 </last>
 </html>
