Added a link to Metro Tas ( 8/17/2020)

--- a/Bus Website.html
+++ b/Bus Website.html
@@ -9,7 +9,7 @@
 <div class="container" style="width: 750px; margin: 0 auto;">
   <div class="row-full"> </div>
 </div>
-<heading> Guide to riding metro: </heading>
+<heading> <a href="https://www.metrotas.com.au/travel-tips/"> Guide to riding metro: </a></heading>
 <h1> Dominic Bus rules and etiquette <span><br>Grade 7-10:</span> </h1>
 <h3> When catching the bus to and from school,
   it is important to understand the bus rules and etiquette.
@@ -20,17 +20,17 @@
 <p> Do not disturb the bus driver, If the bus driver is distracted an accident may happen, be respetful and let the bus driver drive the bus. </p>
 <p> Let grade 10's sit at the back of the bus, any grade 10 should be able to sit at the back, No one should prevent others from taking a seat. </p>
 <p> Listen to the teachers for your safty and line up at the signs </p>
-<last> For more information, Call 13 22 01 for timetable and service information, wheelchair and disability accessible information, and general enquiries. The hotline is staffed 7am to 6pm Monday to Friday. For Online Enquiries
-  Please email correspondence@metrotas.com.au
+<last> For more information, Call 13 22 01 for timetable and service information, wheelchair and disability accessible information, and general enquiries.<br> The hotline is staffed 7am to 6pm Monday to Friday. For Online Enquiries
+  Please email correspondence@metrotas.com.au <br>
   
   
   Enquires In Person
-  Hobart – Metro Shop at 22 Elizabeth Street in the Hobart City bus mall open 8am to 5.30pm Monday to Friday.
+  Hobart – Metro Shop at 22 Elizabeth Street in the Hobart City bus mall open 8am to 5.30pm Monday to Friday.<br>
   
-  Launceston – Depot Office at 168 Wellington Street open 8.30am to 5pm, Monday to Friday.
+  Launceston – Depot Office at 168 Wellington Street open 8.30am to 5pm, Monday to Friday.<br>
   
-  Burnie – Depot Office at 28 Strahan Street open 8.30am to 5pm, Monday to Friday.
+  Burnie – Depot Office at 28 Strahan Street open 8.30am to 5pm, Monday to Friday. <br>
   
   Postal Address
-  PO Box 61, Moonah, TAS 7009 </last>
+PO Box 61, Moonah, TAS 7009 </last>
 </html>
