Took me forever but i got a button that takes you back to the top of the page

--- a/Bus Website.html
+++ b/Bus Website.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 <link href="Bus_website.css" rel="stylesheet" type="text/css">
+<a name="gettop"></a>
+
+<lowbutton id="btn"><a href="#gettop">Back to Top</a></lowbutton>
+
 </head>
 <!--Fix spelling-->
 <!--Key points up top-->
@@ -37,4 +41,8 @@
   
   Postal Address
 PO Box 61, Moonah, TAS 7009 </last>
+	<style> html { scroll-behavior: smooth;} </style>
+<a id="top"></>
+<!--content here-->
+<a href="#top">Back to top..</a>
 </html>
