Made a loading page

--- a/Bus Website.html
+++ b/Bus Website.html
@@ -7,6 +7,7 @@
 <lowbutton id="btn"><a href="#gettop">Back to Top</a></lowbutton>
 
 </head>
+<body>
 <!--Fix spelling-->
 <!--Key points up top-->
 <form>
@@ -44,4 +45,5 @@ PO Box 61, Moonah, TAS 7009 </last>
 	<style> html { scroll-behavior: smooth;} </style>
 
 <!--content here-->
+	</body>
 </html>
