--- a/Bus Website.html
+++ b/Bus Website.html
@@ -2,47 +2,54 @@
 <html>
 <head>
 <link href="Bus_website.css" rel="stylesheet" type="text/css">
-<a name="gettop"></a>
 
+<a name="gettop"></a>
 <lowbutton id="btn"><a href="#gettop">Back to Top</a></lowbutton>
 
-</head>
-<body>
-<!--Fix spelling-->
 <!--Key points up top-->
 <form>
   <button formaction="https://www.metrotas.com.au/travel-tips/">Tips for riding Metro</button>
 </form>
-
-<h1> Dominic Bus rules and etiquette <span><br>Grade 7-10:</span> </h1>
+<h1> Dominic Bus rules and etiquette <span><br>
+  Grade 7-10:</span> </h1>
 <h3> When catching the bus to and from school,
   it is important to understand the bus rules and etiquette.
-  If you understand these rules the bus will be a more enjoyable experience for everyone.<br>Transport at the College is continually revised to maintain efficiency and safety. The College is served by both Metro Services and some private services.<br> We recommend Parents contact bus companies directly for the most up to date information available.
-
- </h3>
-<p> Have your payment method ready, Metro has a green card system, a faster, cheaper way of paying,<br> Use it like a credit card. </p>
-<p> Know where your bus is going and what bus to get on, that way you cen get on and off quickly <br>without causing any delay </p>
-<p> No eating or drinking on the bus, this causes a discomfert , The bus is a small place and it becomes <br>even smaller when its messy</p>
-<p> Do not disturb the bus driver, If the bus driver is distracted an accident may happen, be respetful<br> and let the bus driver drive the bus. </p>
-<p> Let grade 10's sit at the back of the bus, any grade 10 should be able to sit at the back,<br> No one should prevent others from taking a seat. </p>
+  If you understand these rules the bus will be a more enjoyable experience for everyone.<br>
+  Transport at the College is continually revised to maintain efficiency and safety. The College is served by both Metro Services and some private services.<br>
+  We recommend Parents contact bus companies directly for the most up to date information available. </h3>
+<img src="Greencard.jpg" alt="A picture of a greencard">
+<p> Have your payment method ready, Metro has a green card system, a faster, cheaper way of paying,<br>
+  Use it like a credit card. </p>
+<p> Know where your bus is going and what bus to get on, that way you cen get on and off quickly <br>
+  without causing any delay </p>
+<p> No eating or drinking on the bus, this causes a discomfert , The bus is a small place and it becomes <br>
+  even smaller when its messy</p>
+<p> Do not disturb the bus driver, If the bus driver is distracted an accident may happen, be respetful<br>
+  and let the bus driver drive the bus. </p>
+<p> Let grade 10's sit at the back of the bus, any grade 10 should be able to sit at the back,<br>
+  No one should prevent others from taking a seat. </p>
 <p> Listen to the teachers for your safty and line up at the signs </p>
-	<p>You should be at your stop at leaste five minutes before your bus is due because<br> timetables could change based on the road conditions
-</p>
-	<p> When you are getting off at the next stop, <br>push one of the buttons located around the bus signalling it to stop</p>
-<last> For more information,<br> Call 13 22 01 for timetable and service information,<br> wheelchair and disability accessible information, and general enquiries.<br> The hotline is staffed 7am to 6pm Monday to Friday. <br>For Online Enquiries
+<p>You should be at your stop at leaste five minutes before your bus is due because<br>
+  timetables could change based on the road conditions </p>
+<p> When you are getting off at the next stop, <br>
+  push one of the buttons located around the bus signalling it to stop</p>
+<last> For more information,<br>
+  Call 13 22 01 for timetable and service information,<br>
+  wheelchair and disability accessible information, and general enquiries.<br>
+  The hotline is staffed 7am to 6pm Monday to Friday. <br>
+  For Online Enquiries
   Please email correspondence@metrotas.com.au <br>
-  
-  
   Enquires In Person
-  Hobart – Metro Shop at 22 Elizabeth Street in the Hobart City bus <br>mall open 8am to 5.30pm Monday to Friday.<br>
-  
-  Launceston – Depot Office at 168 Wellington Street open 8.30am to 5pm, <br>Monday to Friday.<br>
-  
+  Hobart – Metro Shop at 22 Elizabeth Street in the Hobart City bus <br>
+  mall open 8am to 5.30pm Monday to Friday.<br>
+  Launceston – Depot Office at 168 Wellington Street open 8.30am to 5pm, <br>
+  Monday to Friday.<br>
   Burnie – Depot Office at 28 Strahan Street open 8.30am to 5pm, Monday to Friday. <br>
-  
   Postal Address
-PO Box 61, Moonah, TAS 7009 </last>
-	<style> html { scroll-behavior: smooth;} </style>
+  PO Box 61, Moonah, TAS 7009 </last>
+<style> 
+lowbutton { scroll-behavior: smooth;} 
+</style>
 
 <!--content here-->
 	</body>
