--- a/Bus Website.html
+++ b/Bus Website.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html >
 <html>
 <head>
+	<style type="text/css">
+	@import url("Bus_website.js.css");
+    </style>
+<body>
 <link href="Bus_website.css" rel="stylesheet" type="text/css">
 
 <a name="gettop"></a>
@@ -17,13 +21,49 @@
   If you understand these rules the bus will be a more enjoyable experience for everyone.<br>
   Transport at the College is continually revised to maintain efficiency and safety. The College is served by both Metro Services and some private services.<br>
   We recommend Parents contact bus companies directly for the most up to date information available. </h3>
-<img src="Greencard.jpg" alt="A picture of a greencard">
+<img src="slide.01.jpg" alt="A picture of a greencard">
+		<!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="slide.01.jpg" style="width:100%">
+    <div class="text">Use Greencard when possible</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="slide.02.jpg" style="width:100%">
+    <div class="text">Calmly enter the bus</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="slide.03.jpg" style="width:100%">
+    <div class="text">Be bus smart</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+
 <p> Have your payment method ready, Metro has a green card system, a faster, cheaper way of paying,<br>
   Use it like a credit card. </p>
 <p> Know where your bus is going and what bus to get on, that way you cen get on and off quickly <br>
   without causing any delay </p>
 <p> No eating or drinking on the bus, this causes a discomfert , The bus is a small place and it becomes <br>
   even smaller when its messy</p>
+		<p>Your uniform should be correct when leaving College as well as when arriving at College.<br> So please ensure that your hair is up and your uniform is correct.</p>
 <p> Do not disturb the bus driver, If the bus driver is distracted an accident may happen, be respetful<br>
   and let the bus driver drive the bus. </p>
 <p> Let grade 10's sit at the back of the bus, any grade 10 should be able to sit at the back,<br>
@@ -53,4 +93,5 @@ lowbutton { scroll-behavior: smooth;}
 
 <!--content here-->
 	</body>
+	</head>
 </html>
