--- a/Bus Website.html
+++ b/Bus Website.html
@@ -21,7 +21,35 @@
   If you understand these rules the bus will be a more enjoyable experience for everyone.<br>
   Transport at the College is continually revised to maintain efficiency and safety. The College is served by both Metro Services and some private services.<br>
   We recommend Parents contact bus companies directly for the most up to date information available. </h3>
-<img src="slide.01.jpg" alt="A picture of a greencard">
+	<script >var slideIndex = 1;
+showSlides(slideIndex);
+
+// Next/previous controls
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+// Thumbnail image controls
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+}</script>
+
 		<!-- Slideshow container -->
 <div class="slideshow-container">
 
