Added alt names to pictures

--- a/Bus Website.html
+++ b/Bus Website.html
@@ -56,19 +56,19 @@ function showSlides(n) {
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="slide.01.jpg" style="width:100%">
+    <img src="slide.01.jpg" alt="Use Greencard when possible" style="width:100%">
     <div class="text">Use Greencard when possible</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="slide.02.jpg" style="width:100%">
+    <img src="slide.02.jpg" alt="Calmly enter the bus" style="width:100%">
     <div class="text">Calmly enter the bus</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="slide.03.jpg" style="width:100%">
+    <img src="slide.03.jpg" alt="Be bus smart" style="width:100%">
     <div class="text">Be bus smart</div>
   </div>
 
