--- a/Bus Website.html
+++ b/Bus Website.html
@@ -4,6 +4,39 @@
 	<style type="text/css">
 	@import url("Bus_website.js.css");
     </style>
+		<style>
+.parallax {
+  /* The image used */
+  background-image: url("slide.03.jpg");
+
+  /* Set a specific height */
+  height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
+<style>
+.parallax2 {
+  /* The image used */
+  background-image: url("slide.02.jpg");
+
+  /* Set a specific height */
+  height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
+
+<!-- Container element -->
+<div class="parallax"></div>
 <body>
 <link href="Bus_website.css" rel="stylesheet" type="text/css">
 
@@ -21,6 +54,7 @@
   If you understand these rules the bus will be a more enjoyable experience for everyone.<br>
   Transport at the College is continually revised to maintain efficiency and safety. The College is served by both Metro Services and some private services.<br>
   We recommend Parents contact bus companies directly for the most up to date information available. </h3>
+
 	<script >var slideIndex = 1;
 showSlides(slideIndex);
 
@@ -114,10 +148,59 @@ function showSlides(n) {
   Monday to Friday.<br>
   Burnie – Depot Office at 28 Strahan Street open 8.30am to 5pm, Monday to Friday. <br>
   Postal Address
-  PO Box 61, Moonah, TAS 7009 </last>
+  PO Box 61, Moonah, TAS 7009 <br>
+	</last>
+	<credit>
+		Made by Nathan Causby, Kaykebb Bygraves and Brin dare
+	</credit>
+	
 <style> 
 lowbutton { scroll-behavior: smooth;} 
 </style>
+	<style>
+.parallax {
+  /* The image used */
+  background-image: url("slide.03.jpg");
+
+  /* Set a specific height */
+  height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+	/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
+@media only screen and (max-device-width: 1366px) {
+  .parallax {
+    background-attachment: scroll;
+  }
+}
+}
+</style>
+	<style>
+.parallax2 {
+  /* The image used */
+  background-image: url("slide.03.jpg");
+
+  /* Set a specific height */
+  height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+	/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
+@media only screen and (max-device-width: 1366px) {
+  .parallax2 {
+    background-attachment: scroll;
+  }
+}
+}
+</style>
+		
+
 
 <!--content here-->
 	</body>
