font size change

--- a/Bus Website.html
+++ b/Bus Website.html
@@ -125,11 +125,11 @@ function showSlides(n) {
   without causing any delay </p>
 <p> No eating or drinking on the bus, this causes a discomfert , The bus is a small place and it becomes <br>
   even smaller when its messy</p>
-		<p>Your uniform should be correct when leaving College as well as when arriving at College.<br> So please ensure that your hair is up and your uniform is correct.</p>
-<p> Do not disturb the bus driver, If the bus driver is distracted an accident may happen, be respetful<br>
-  and let the bus driver drive the bus. </p>
-<p> Let grade 10's sit at the back of the bus, any grade 10 should be able to sit at the back,<br>
-  No one should prevent others from taking a seat. </p>
+		<pright>Your uniform should be correct when leaving College as well as when arriving at College.<br> So please ensure that your hair is up and your uniform is correct.</pright><br>
+<pright> Do not disturb the bus driver, If the bus driver is distracted an accident may happen, be respetful<br>
+  and let the bus driver drive the bus. </pright>
+<pright> Let grade 10's sit at the back of the bus, any grade 10 should be able to sit at the back,<br>
+  No one should prevent others from taking a seat. </pright> <br>
 <p> Listen to the teachers for your safty and line up at the signs </p>
 <p>You should be at your stop at leaste five minutes before your bus is due because<br>
   timetables could change based on the road conditions </p>
