--- a/Bus Website.html
+++ b/Bus Website.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<style type="text/css">
-	@import url("Bus_website.js.css");
+	
     </style>
 		<style>
 .parallax {
@@ -151,7 +151,7 @@ function showSlides(n) {
   PO Box 61, Moonah, TAS 7009 <br>
 	</last>
 	<credit>
-		Made by Nathan Causby, Kaykebb Bygraves and Brin dare
+		Made by Nathan Causby, Kaylebb Bygraves and Bryn Dare
 	</credit>
 	
 <style> 
