--- a/Bus Website.html
+++ b/Bus Website.html
@@ -38,7 +38,7 @@
 <!-- Container element -->
 <div class="parallax"></div>
 <body>
-	
+
 <link href="Bus_website.css" rel="stylesheet" type="text/css">
 
 
@@ -119,18 +119,19 @@ function showSlides(n) {
 </div>
 
 <p> Have your payment method ready, Metro has a green card system, a faster, cheaper way of paying,<br>
-  Use it like a credit card. </p>
+  use it like a tap to paycredit card. </p>
 <p> Know where your bus is going and what bus to get on, that way you cen get on and off quickly <br>
   without causing any delay </p>
-<p> No eating or drinking on the bus, this causes a discomfert , The bus is a small place and it becomes <br>
-  even smaller when its messy</p>
+<p> No eating or drinking on the bus, this causes a discomfort , The bus is a small place and it becomes <br>
+  even smaller when it's messy</p>
 		<pright>Your uniform should be correct when leaving College as well as when arriving at College.<br> So please ensure that your hair is up and your uniform is correct.</pright><br>
-<pright> <br> Do not disturb the bus driver, If the bus driver is distracted an accident may happen, be respetful<br>
+<pright> <br> Do not disturb the bus driver, If the bus driver is distracted an accident may happen, be respectful<br>
   and let the bus driver drive the bus. </pright><br>
 <pright><br> Let grade 10's sit at the back of the bus, any grade 10 should be able to sit at the back,<br>
-  No one should prevent others from taking a seat. <br></pright> <br>
-<p> Listen to the teachers for your safty and line up at the signs </p>
-<p>You should be at your stop at leaste five minutes before your bus is due because<br>
+  No one should prevent others from taking a seat if possible <br></pright> <br>
+<p> Listen to the teachers for your safety and line up at the signs </p>
+<p>You should be at your stop at least
+ five minutes before your bus is due <br>
   timetables could change based on the road conditions </p>
 <p> When you are getting off at the next stop, <br>
   push one of the buttons located around the bus signalling it to stop</p>
@@ -149,13 +150,12 @@ function showSlides(n) {
   Postal Address
   PO Box 61, Moonah, TAS 7009 <br>
 	</last>
+	<pdfbutton type="submit" onclick="window.open('file:///D:/nathan.causby/Website/2020-Bus-Information.pdf')"> 2020 student bus transport pdf </pdfbutton>
 	<credit>
 		Made by Nathan Causby, Kaylebb Bygraves and Bryn Dare
 	</credit>
 	
-<style> 
-lowbutton { scroll-behavior: smooth;} 
-</style>
+
 	<style>
 .parallax {
   /* The image used */
