--- a/Bus Website.html
+++ b/Bus Website.html
@@ -150,7 +150,7 @@ function showSlides(n) {
   Postal Address
   PO Box 61, Moonah, TAS 7009 <br>
 	</last>
-	<pdfbutton type="submit" onclick="window.open('file:///D:/nathan.causby/Website/2020-Bus-Information.pdf')"> 2020 student bus transport pdf </pdfbutton>
+	<pdfbutton type="submit" onclick="window.open('2020-Bus-Information.pdf')"> 2020 student bus transport pdf </pdfbutton>
 	<credit>
 		Made by Nathan Causby, Kaylebb Bygraves and Bryn Dare
 	</credit>
